fixing hobby overflow issue

--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -1,3 +1,9 @@
+.hobby-tags{
+    overflow: hidden;
+    width: 100%;
+    height: 90%;
+}
+
 .hobby-card {
     background: #efefef;
     display: flex;
